--- a/index.html
+++ b/index.html
@@ -5,10 +5,185 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+	
+		h1 {
+		font-size:50px;
+		font-family: Segoe UI Light;		
+		}
+	
+		.subheading {
+		font-size:32px;
+		font-family: Segoe UI Light;		
+		}
+		
+		/* Top Navigation Bar */
+		
+		.topnav {
+			width:100%;
+			margin:0 auto;
+			padding:0;
+			text-align:center;
+		  overflow: hidden;
+		  background-color: #eeeeee;
+		}
+
+		.topnav li { 
+			display:inline-block;
+			width:16%;
+			margin:0;
+			padding:0;
+		}
+		.topnav a {
+		  float: center;
+		  color: #333333;
+		  text-align: center;
+		  padding: 15px 15px;
+		  text-decoration: none;
+		  font-family: Segoe UI Light;
+		  font-size: 17px;
+		  font-weight: bold;
+		}
+
+		.topnav a:hover {
+		  background-color: #333333;
+		  color: #eeeeee;
+		}
+
+		.topnav a.active {
+		  background-color: #333333;
+		  color: #eeeeee;
+		}
+
+
+		body, html {
+			height: 100%;
+		}
+
+		/* The hero image */
+		.hero-image {
+		  /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
+		  background-image: linear-gradient(rgba(53,151,129, 0.3), rgba(53,151,129, 0.3)), url("Events_Banner.png");
+
+		  /* Set a specific height */
+		  height: 34%;
+
+		  /* Position and center the image to scale nicely on all screens */
+		  background-position: center;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  position: relative;
+		}
+
+		/* Place text in the middle of the image */
+		.hero-text {
+		  text-align: center;
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  transform: translate(-50%, -50%);
+		  color: white;
+		}
+		
+		
+		/*Style the footer list*/
+		.table {
+			display: table;   /* Allow the centering to work */
+			margin: 0 auto;
+		}
+
+		ul {
+			list-style: none;
+		  list-style-type: none;
+		  margin: 0;
+		  padding-top: 20px;
+		  padding-bottom: 20px;
+		  overflow: hidden;
+		}
+				
+		li{
+		display: block;
+		color: #111111;
+		text-align: center;
+		padding: 16px;
+		float: left;
+		font-size:12px;
+		font-family: Segoe UI;
+		}
+
+		li a {
+		color: #111111;
+		text-decoration: none;
+		}
+
+		li a:hover {
+		  color: #eeeeee;
+		  background-color: #111111;
+		}
+		
+		/*Vertical Toolbar*/
+		
+		.icon-bar {
+		  width: 90px; /* Set a specific width */
+		  background-color: #ffffff; /* Dark-grey background */
+		  position: fixed; /* Set the navbar to fixed position */
+		  bottom: 110px; /* Position the navbar at the top of the page */
+		  right: 30px;
+		}
+
+		.icon-bar a {
+		  display: block; /* Make the links appear below each other instead of side-by-side */
+		  text-align: center; /* Center-align text */
+		  padding: 3px; /* Add some padding */
+		  transition: all 0.3s ease; /* Add transition for hover effects */
+		  color: #999999; /* White text color */
+		  font-size: 28px; /* Increased font-size */
+		}
+
+		.icon-bar a:hover {
+		  background-color: #000; /* Add a hover color */
+		}
+
+		.active {
+		  background-color: #359781; /* Add an active/current color */
+		}
+
+	</style>
 </head>
 
 <body>
+
+	<div class="topnav">
+	  <li><a href="https://www.ansyscommunity.com/">Home</a></li>
+	  <li><a href="https://www.ansyscommunity.com/discuss-share">Discuss & Share</a></li>
+	  <li><a href="https://www.ansyscommunity.com/take-course">Take a Course</a></li>
+	  <li><a href="https://www.ansyscommunity.com/watch-learn">Watch & Learn</a></li>
+	  <li><a href="https://www.ansyscommunity.com/get-advice">Get Advice</a></li>
+	  <li><a href="https://www.ansyscommunity.com/find-job">Find a Job</a></li>
+	</div>
+
+	<div class="hero-image">
+	  <div class="hero-text">
+		<h1>Join Events</h1>
+		<button></button>
+		<p class="subheading">Join Office Hours, Video Conferences, Group Discussions, Webinars.</p>
+
+	  </div>
+	</div>
+
+	<div class="icon-bar">
+	  <a href="https://www.ansyscommunity.com/account/my-account"><img src="User.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/meet-chat"><img src="Discuss.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/join-events"><img src="Events.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/share-models"><img src="ShareModels.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/read-articles"><img src="ReadArticles.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/download-software"><img src="Download.png" height="28"></a>
+	  <a href="https://www.ansyscommunity.com/"><img src="Home.png" height="28"></a>
+	</div>
+
     <main>
         <div id="cards">
         </div>
@@ -16,6 +191,22 @@
 
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script src="script.js"></script>
+	
+	<footer>
+		<div class="table">
+		<ul>
+			<li>© 2020 ANSYS, Inc. All rights reserved.</li>
+			<li><a href="/footer/legal-notices" title="Legal Notices">Legal Notices</a> </li>
+			<li><a href="/footer/privacy-notice" title="Privacy Notice">Privacy Notice</a> </li>
+			<li><a href="/footer/cookie-policy" title="Cookie Policy">Cookie Policy</a> </li>
+			<li><a href="/footer/data-subject-rights-policy" title="Data Subject Rights Policy">Data Subject Rights Policy</a> </li>
+			<li><a href="/footer/export-control-compliance" title="Export Compliance">Export Compliance</a> </li>
+			<li><a href="/footer/terms-and-conditions" title="Terms and Conditions">Terms and Conditions</a> </li>
+			<li><a href="/footer/site-map" title="Site Map">Site Map</a> </li>
+		</ul>
+
+		</div>
+	</footer>
 </body>
 
 </html>
