--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	<div class="icon-bar">
 	  <a href="https://www.ansyscommunity.com/account/my-account"><img src="User.png" height="28"></a>
 	  <a href="https://www.ansyscommunity.com/meet-chat"><img src="Discuss.png" height="28"></a>
-	  <a href="https://www.ansyscommunity.com/join-events"><img src="Events.png" height="28"></a>
+	  <a href="https://mkumar12345.github.io/Events/"><img src="Events.png" height="28"></a>
 	  <a href="https://www.ansyscommunity.com/share-models"><img src="ShareModels.png" height="28"></a>
 	  <a href="https://www.ansyscommunity.com/read-articles"><img src="ReadArticles.png" height="28"></a>
 	  <a href="https://www.ansyscommunity.com/download-software"><img src="Download.png" height="28"></a>
