--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="filter.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Join Events | ANSYS Community</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -185,10 +186,15 @@
 	</div>
 
     <main>
+		<div class="filters">
+			<div id="drop_downs">
+			</div>
+        </div>
         <div id="cards">
         </div>
     </main>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script src="script.js"></script>
 	
