--- a/index.html
+++ b/index.html
@@ -186,9 +186,20 @@
 	</div>
 
     <main>
-		<div class="filters">
-			<div id="drop_downs">
-			</div>
+        <div class="filters">
+            <div id="drop_downs">
+            </div>
+            <div class="date">
+                <div id="current_min_date">03/06/2019</div>
+              <div id="min"></div>
+              <div id="range"></div>
+              <div id="max"></div>
+              <div id="current_max_date">09/17/2019</div>
+            </div>
+            <div class="search" id="search_holder">
+                <img src="imgs/search.png" alt="">
+                <input id="search" type="text" placeholder="Search by keyword" onkeyup="search(this.value)">
+            </div>
         </div>
         <div id="cards">
         </div>
@@ -202,13 +213,12 @@
 		<div class="table">
 		<ul>
 			<li>© 2020 ANSYS, Inc. All rights reserved.</li>
-			<li><a href="/footer/legal-notices" title="Legal Notices">Legal Notices</a> </li>
-			<li><a href="/footer/privacy-notice" title="Privacy Notice">Privacy Notice</a> </li>
-			<li><a href="/footer/cookie-policy" title="Cookie Policy">Cookie Policy</a> </li>
-			<li><a href="/footer/data-subject-rights-policy" title="Data Subject Rights Policy">Data Subject Rights Policy</a> </li>
-			<li><a href="/footer/export-control-compliance" title="Export Compliance">Export Compliance</a> </li>
-			<li><a href="/footer/terms-and-conditions" title="Terms and Conditions">Terms and Conditions</a> </li>
-			<li><a href="/footer/site-map" title="Site Map">Site Map</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/legal-notices" title="Legal Notices">Legal Notices</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/privacy-notice" title="Privacy Notice">Privacy Notice</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/cookie-policy" title="Cookie Policy">Cookie Policy</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/data-subject-rights-policy" title="Data Subject Rights Policy">Data Subject Rights Policy</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/export-control-compliance" title="Export Compliance">Export Compliance</a> </li>
+			<li><a href="https://www.ansys.com/en-gb/footer/terms-and-conditions" title="Terms and Conditions">Terms and Conditions</a> </li>
 		</ul>
 
 		</div>
