--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	  <div class="hero-text">
 		<h1>Join Events</h1>
 		<button></button>
-		<p class="subheading">Join Office Hours, Video Conferences, Group Discussions, Webinars.</p>
+		<p class="subheading">Learn & Connect</p>
 
 	  </div>
 	</div>
